[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
js-sys = "0.3.60"
rand = "0.8.5"
wasm-bindgen = "0.2.83"
wasm-react = "0.3.2"
web-sys = { version = "0.3.60", features = ["Window", "HtmlElement"] }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
